Fixed z-index in the Direct Tune and rename Grant Access to Request Access

--- a/web/src/css/media.css
+++ b/web/src/css/media.css
@@ -18,7 +18,7 @@
 }
 
 #media_directTune {
-    z-index: 503;
+    z-index: 5;
     position: absolute;
     top: 290px;
     left: 165px;
